objects/Planned_Parts__c.object
<CustomObject>
    <description>Parts required for interventions related to the PM Schedule Definition</description>
    <fields>
        <fullName>PM_Schedule_Definition__c</fullName>
        <label>PM Schedule Definition</label>
        <referenceTo>SVMXC__PM_Schedule_Definition__c</referenceTo>
        <relationshipLabel>Planned Parts</relationshipLabel>
        <relationshipName>Planned_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Planned_Parts</relationshipLabel>
        <relationshipName>Planned_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_Quantity__c</fullName>
        <label>Required Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Planned Parts</label>
    <nameField>
        <displayFormat>PP-{000000}</displayFormat>
        <label>Planned Parts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planned Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>